[gd_scene load_steps=4 format=3 uid="uid://xke805spa83l"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_lcuaf"]
[ext_resource type="Texture2D" uid="uid://6fdnb3yyp12o" path="res://Assets/Graphics/Units/Menu Design-2.png" id="2_oq1hj"]
[ext_resource type="Texture2D" uid="uid://etu1tdwn62t5" path="res://Assets/Graphics/Units/PLAYBUTTON-2_2_20.png" id="3_tr2ny"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lcuaf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(674, 308.5)
scale = Vector2(0.563361, 0.350303)
texture = ExtResource("2_oq1hj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 89.0
offset_right = -1.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Headers" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 75

[node name="title" type="Label" parent="MarginContainer/Headers"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "World
Conquest"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="buttons" type="VBoxContainer" parent="MarginContainer/Headers"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Play_Button" type="TextureButton" parent="MarginContainer/Headers/buttons"]
layout_mode = 2
texture_normal = ExtResource("3_tr2ny")

[node name="OptionsButton" type="Button" parent="MarginContainer/Headers/buttons"]
layout_mode = 2
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="MarginContainer/Headers/buttons"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="MarginContainer/Headers/buttons/Play_Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/Headers/buttons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/Headers/buttons/QuitButton" to="." method="_on_quit_button_pressed"]
